docs/examples/kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rainbow
spec:
  selector:
    app: rainbow
  clusterIP: None
