docs/examples/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rainbow
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rainbow
            port: 
              # TODO look at what wfmanager is doing with mlserver
              number: 8080
